<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="false"
        app:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="38dp">

            <ImageView
                android:id="@+id/toolbar_logo_main_activity_id"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/app_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_main_activity_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/toolbar_logo_main_activity_id"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="monospace"
                    android:text="@string/main_activity_title"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="5dp" />

            </androidx.appcompat.widget.Toolbar>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_mainactivity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/log_field_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/enter_email"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/colorLightButtons"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/textInputLayoutStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_login_email_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/log_field_height"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:lines="1"
            android:maxLines="1"
            android:paddingStart="@dimen/margin_medium"
            android:singleLine="true"
            android:textCursorDrawable="@color/colorPrimaryDark"
            android:theme="@style/textInputEditTextStyle"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_login_mainactivity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/log_field_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/enter_password"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/colorLightButtons"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/textInputLayoutStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinputlayout_mainactivity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_login_password_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/log_field_height"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:paddingStart="@dimen/margin_medium"
            android:textCursorDrawable="@color/colorPrimaryDark"
            android:theme="@style/textInputEditTextStyle"
            tools:ignore="RtlSymmetry"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="250dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login_id"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_ripple_effect"
        android:layout_marginTop="@dimen/margin_small"
        android:textColor="@color/white"
        android:text="@string/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_login_mainactivity" />

    <TextView
        android:id="@+id/text_view_sign_in_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusedByDefault="true"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/text_view_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login_id" />

    <ProgressBar
        android:id="@+id/progressbar_main_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone"
        android:elevation="@dimen/elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>