<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/show_dialog_event"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/show_dialog_event_constraint_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:background="@drawable/event_dialog_view_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/show_dialog_data_displayed_hint_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/data"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Data" />

        <TextView
            android:id="@+id/event_details_data_displayed_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline1_id"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2019-09-09" />

        <TextView
            android:id="@+id/show_dialog_event_displayed_hint_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/event_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_dialog_data_displayed_hint_text_id"
            tools:text="event" />

        <TextView
            android:id="@+id/event_details_event_displayed_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline1_id"
            app:layout_constraintTop_toBottomOf="@+id/event_details_data_displayed_id"
            tools:text="event" />

        <TextView
            android:id="@+id/show_dialog_week_displayed_hint_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/day_of_week"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_dialog_event_displayed_hint_text_id"
            tools:text="week" />

        <TextView
            android:id="@+id/event_details_week_day_displayed_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline1_id"
            app:layout_constraintTop_toBottomOf="@+id/event_details_event_displayed_id"
            tools:text="poniedziałek" />

        <TextView
            android:id="@+id/show_dialog_time_displayed_hint_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/hour"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_dialog_week_displayed_hint_text_id"
            tools:text="godzina" />

        <TextView
            android:id="@+id/event_details_time_displayed_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline1_id"
            app:layout_constraintTop_toBottomOf="@+id/event_details_week_day_displayed_id"
            tools:text="22:00" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.45" />

        <ImageButton
            android:id="@+id/event_details_delete_button_id"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="@dimen/show_buttons_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:background="@drawable/button_details_ripple_effect"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_details_week_day_displayed_id" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>