<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/show_dialog_event"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/show_dialog_top_id"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/show_dialog_title_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/show_dialog_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/show_dialog_data_displayed_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/show_dialog_title_id"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2019-08-12" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/show_dialog_event_constraint_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_big"
        android:background="@drawable/recycler_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_dialog_top_id">

        <TextView
            android:id="@+id/show_dialog_event_displayed_hint_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/event_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="event" />

        <TextView
            android:id="@+id/show_dialog_event_displayed_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_nano"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline1_id"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="event" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/show_dialog_week_constraint_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_big"
        android:background="@drawable/recycler_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_dialog_event_constraint_id">

        <TextView
            android:id="@+id/show_dialog_week_displayed_hint_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/day_of_week"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="week" />

        <TextView
            android:id="@+id/show_dialog_week_day_displayed_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_nano"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2_id"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="poniedziałek" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/show_dialog_time_constraint_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_big"
        android:background="@drawable/recycler_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_dialog_week_constraint_id">

        <TextView
            android:id="@+id/show_dialog_time_displayed_hint_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/hour"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="godzina" />

        <TextView
            android:id="@+id/show_dialog_time_displayed_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_nano"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3_id"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="22:00" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageButton
        android:id="@+id/show_dialog_cancel_button_id"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/show_buttons_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_dialog_time_constraint_id"
        android:background="@drawable/button_details_ripple_effect"
        android:src="@drawable/ic_backspace"/>

    <ImageButton
        android:id="@+id/show_dialog_delete_button_id"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/show_buttons_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_marginEnd="@dimen/margin_small"
        app:layout_constraintEnd_toStartOf="@+id/show_dialog_add_button_id"
        app:layout_constraintStart_toEndOf="@+id/show_dialog_cancel_button_id"
        app:layout_constraintTop_toBottomOf="@+id/show_dialog_time_constraint_id"
        android:background="@drawable/button_details_ripple_effect"
        android:src="@drawable/ic_delete"/>

    <ImageButton
        android:id="@+id/show_dialog_add_button_id"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/show_buttons_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_marginEnd="@dimen/margin_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_dialog_time_constraint_id"
        android:background="@drawable/button_details_ripple_effect"
        android:src="@drawable/ic_add"/>

</androidx.constraintlayout.widget.ConstraintLayout>